--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="http://localhost:8080/bootpay-latest.js" type="application/javascript"></script>
+        <script src="../../bootpay-latest.js" type="application/javascript"></script>
         <script src="./payment.js" type="application/javascript"></script>
         <meta charset="utf-8" />
     </head>
