--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -4,6 +4,7 @@
         <script src="../../bootpay-latest.js" type="application/javascript"></script>
         <script src="./payment.js" type="application/javascript"></script>
         <meta charset="utf-8" />
+        <meta name="bootpay-application-id" content="59a568d3e13f3336c21bf707" />
     </head>
     <body>
         <button class="button">결제 요청하기</button>
