이벤트 namespcae element 이벤트 추가

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -5,8 +5,9 @@
         <script src="./payment.js" type="application/javascript"></script>
         <meta charset="utf-8" />
         <meta name="bootpay-application-id" content="59a568d3e13f3336c21bf707" />
+        <link rel="stylesheet" media="all" href="./style.css" />
     </head>
     <body>
-        <button class="button">결제 요청하기</button>
+        <button class="button" onclick="doPayment()">결제 요청하기</button>
     </body>
 </html>
