--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -8,6 +8,38 @@
         <link rel="stylesheet" media="all" href="./style.css" />
     </head>
     <body>
-        <button class="button" onclick="doPayment()">결제 요청하기</button>
+        <div class="pg-select-container">
+            <div class="pg-select-box">
+                <h2 class="title">결제 요청 하기</h2>
+                <div class="group">
+                    <label>PG 회사 선택</label>
+                    <select class="bootpay-select" name="pg">
+                        <option value="kcp">KCP</option>
+                        <option value="danal">다날</option>
+                        <option value="lgup">LGU+</option>
+                        <option value="inicis">이니시스</option>
+                        <option value="kakao">카카오페이</option>
+                    </select>
+                </div>
+                <div class="group">
+                    <label>결제수단선택</label>
+                    <select class="bootpay-select" name="method">
+                        <option value="card">카드결제</option>
+                        <option value="phone">휴대폰소액결제</option>
+                        <option value="vbank">가상계좌</option>
+                        <option value="bank">계좌이체</option>
+                    </select>
+                </div>
+                <div class="group">
+                    <label>금액설정</label>
+                    <input class="input-block" value="3000" name="price" />
+                </div>
+                <div class="group text-center">
+                    <button class="button" onclick="doPayment()">
+                        결제요청하기
+                    </button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
