--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -5,7 +5,7 @@
         <script src="./payment.js" type="application/javascript"></script>
         <meta charset="utf-8" />
         <meta name="bootpay-application-id" content="59a568d3e13f3336c21bf707" />
-        <link rel="stylesheet" media="all" href="./style.css" />
+        <link rel="stylesheet" media="all" href="../stylesheet/style.css" />
     </head>
     <body>
         <div class="pg-select-container">
