--- a/test/analytics/index.html
+++ b/test/analytics/index.html
@@ -48,6 +48,9 @@
         </div>
         <div class="button-box text-center">
             <button class="button" onclick="doLogin()">로그인하기</button>
+            &nbsp;
+            &nbsp;
+            <button class="button" onclick="doNotify()">결제정보전송</button>
         </div>
     </div>
 </div>
