--- a/test/analytics/index.html
+++ b/test/analytics/index.html
@@ -4,6 +4,7 @@
     <script src="../../bootpay-latest.js" type="application/javascript"></script>
     <script src="./analytics.js" type="application/javascript"></script>
     <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
     <meta name="bootpay-application-id" content="59a568d3e13f3336c21bf707"/>
     <link rel="stylesheet" media="all" href="../stylesheet/style.css"/>
 </head>
