production 테스트 가능 페이지 추가 json.message 출력 버그 수정 2.0.4 배포 준비

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -39,6 +39,9 @@
                     <button class="button" onclick="doPayment()">
                         결제요청하기
                     </button>
+                    <button class="button" onclick="doAllPayment()">
+                        모든 활성화된 결제창 띄우기
+                    </button>
                 </div>
             </div>
         </div>
