카드 정기 결제 테스트 추가

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -29,6 +29,7 @@
                         <option value="phone">휴대폰소액결제</option>
                         <option value="vbank">가상계좌</option>
                         <option value="bank">계좌이체</option>
+                        <option value="card_rebill">카드정기결제</option>
                     </select>
                 </div>
                 <div class="group">
