카드 정기결제 선택시 금액 0원으로 자동 변경

--- a/test/payment/production.html
+++ b/test/payment/production.html
@@ -24,7 +24,7 @@
         </div>
         <div class="group">
             <label>결제수단선택</label>
-            <select class="bootpay-select" name="method">
+            <select class="bootpay-select" name="method" onchange="changeMethod(this);">
                 <option value="card">카드결제</option>
                 <option value="phone">휴대폰소액결제</option>
                 <option value="vbank">가상계좌</option>
