--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -20,6 +20,7 @@
                         <option value="lgup">LGU+</option>
                         <option value="inicis">이니시스</option>
                         <option value="kakao">카카오페이</option>
+                        <option value="nicepay">나이스페이</option>
                     </select>
                 </div>
                 <div class="group">
