테스트 케이스 추가 inapp nginx 파일 변경

--- a/test/payment/production.html
+++ b/test/payment/production.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://cdn.bootpay.co.kr/js/bootpay-2.0.3.min.js" type="application/javascript"></script>
+    <script src="https://cdn.bootpay.co.kr/js/bootpay-2.0.6.min.js" type="application/javascript"></script>
     <script src="./production.js" type="application/javascript"></script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
@@ -20,6 +20,7 @@
                 <option value="lgup">LGU+</option>
                 <option value="inicis">이니시스</option>
                 <option value="kakao">카카오페이</option>
+                <option value="payapp">페이앱</option>
             </select>
         </div>
         <div class="group">
