--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -21,6 +21,7 @@
                         <option value="inicis">이니시스</option>
                         <option value="kakao">카카오페이</option>
                         <option value="nicepay">나이스페이</option>
+                        <option value="payapp">페이앱</option>
                     </select>
                 </div>
                 <div class="group">
