--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -38,6 +38,10 @@
                     <label>금액설정</label>
                     <input class="input-block" value="3000" name="price" />
                 </div>
+                <div class="group">
+                    <label>면세금액</label>
+                    <input class="input-block" value="0" name="tax_free" />
+                </div>
                 <div class="group text-center">
                     <button class="button" onclick="doPayment()">
                         결제요청하기
