테스트 케이스 추가

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -22,6 +22,8 @@
                         <option value="kakao">카카오페이</option>
                         <option value="nicepay">나이스페이</option>
                         <option value="payapp">페이앱</option>
+                        <option value="npay">네이버페이</option>
+                        <option value="kakao">카카오페이</option>
                     </select>
                 </div>
                 <div class="group">
@@ -32,6 +34,7 @@
                         <option value="vbank">가상계좌</option>
                         <option value="bank">계좌이체</option>
                         <option value="card_rebill">카드정기결제</option>
+                        <option value="easy">간편결제</option>
                     </select>
                 </div>
                 <div class="group">
