창 닫기 모드 추가 2.0.12 버전 다시 업데이트

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -7,6 +7,11 @@
         <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
         <meta name="bootpay-application-id" content="59a568d3e13f3336c21bf707" />
         <link rel="stylesheet" media="all" href="../stylesheet/style.css" />
+        <style>
+            body {
+                margin: 0;
+            }
+        </style>
     </head>
     <body>
         <div class="pg-select-container">
@@ -19,7 +24,6 @@
                         <option value="danal">다날</option>
                         <option value="lgup">LGU+</option>
                         <option value="inicis">이니시스</option>
-                        <option value="kakao">카카오페이</option>
                         <option value="nicepay">나이스페이</option>
                         <option value="payapp">페이앱</option>
                         <option value="npay">네이버페이</option>
