--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -28,6 +28,7 @@
                         <option value="payapp">페이앱</option>
                         <option value="npay">네이버페이</option>
                         <option value="kakao">카카오페이</option>
+                        <option value="tpay">TPAY</option>
                     </select>
                 </div>
                 <div class="group">
