--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -29,6 +29,7 @@
                         <option value="npay">네이버페이</option>
                         <option value="kakao">카카오페이</option>
                         <option value="tpay">TPAY</option>
+                        <option value="payletter">페이레터</option>
                     </select>
                 </div>
                 <div class="group">
