package 의존성 수정 payment 테스트 코드 수정

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src="../../bootpay-latest.js" type="application/javascript"></script>
         <script src="./payment.js" type="application/javascript"></script>
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
         <meta name="bootpay-application-id" content="59a568d3e13f3336c21bf707" />
