confirm 2번 되는 현상 막는 Code confirm lock 추가

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -42,7 +42,7 @@
                         <option value="bank">계좌이체</option>
                         <option value="card_rebill">카드정기결제</option>
                         <option value="easy">간편결제</option>
-                        <option value="rocketpay">로켓페이</option>
+                        <option value="bootpay">부트페이 간편결제</option>
                     </select>
                 </div>
                 <div class="group">
