ios 인앱 iFrame으로 결제창을 띄울 경우 탭 위치 버그 수정

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -3,14 +3,21 @@
     <head>
         <script src="../../bootpay-latest.js" type="application/javascript"></script>
         <script src="./payment.js" type="application/javascript"></script>
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="none" />
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
         <meta name="bootpay-application-id" content="59a568d3e13f3336c21bf707" />
         <link rel="stylesheet" media="all" href="../stylesheet/style.css" />
         <style>
+            html {
+                margin: 0;
+                padding: 0;
+            }
             body {
                 margin: 0;
+                padding: 0;
             }
         </style>
     </head>
