팝업에서 notification해주는 confirmready child action을 기존 origin action에 대응되도록 변경

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -38,6 +38,7 @@
                         <option value="kakao">카카오페이</option>
                         <option value="tpay">TPAY</option>
                         <option value="payletter">페이레터</option>
+                        <option value="easypay">KICC</option>
                     </select>
                 </div>
                 <div class="group">
