--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -50,6 +50,7 @@
                         <option value="bank">계좌이체</option>
                         <option value="card_rebill">카드정기결제</option>
                         <option value="easy">간편결제</option>
+                        <option value="order">주문결제</option>
                         <option value="bootpay">부트페이 간편결제</option>
                     </select>
                 </div>
