--- a/test/payment/production.html
+++ b/test/payment/production.html
@@ -31,6 +31,7 @@
                 <option value="vbank">가상계좌</option>
                 <option value="bank">계좌이체</option>
                 <option value="card_rebill">카드정기결제</option>
+                <option value="easy">간편결제</option>
             </select>
         </div>
         <div class="group">
