--- a/test/payment/production.html
+++ b/test/payment/production.html
@@ -21,6 +21,7 @@
                 <option value="inicis">이니시스</option>
                 <option value="kakao">카카오페이</option>
                 <option value="payapp">페이앱</option>
+                <option value="nicepay">나이스페이</option>
             </select>
         </div>
         <div class="group">
@@ -32,6 +33,7 @@
                 <option value="bank">계좌이체</option>
                 <option value="card_rebill">카드정기결제</option>
                 <option value="easy">간편결제</option>
+                <option value="bootpay">부트페이간편결제</option>
             </select>
         </div>
         <div class="group">
