--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -62,6 +62,10 @@
                     <label>면세금액</label>
                     <input class="input-block" value="0" name="tax_free" />
                 </div>
+                <div class="group">
+                    <label>결제키 (BOOT_KEY)</label>
+                    <input class="input-block" value="" name="boot_key" />
+                </div>
                 <div class="group text-center">
                     <button class="button" onclick="doPayment()">
                         결제요청하기
