thirdparty 옵션 기능 추가

--- a/test/payment/index.html
+++ b/test/payment/index.html
@@ -39,6 +39,7 @@
                         <option value="tpay">TPAY</option>
                         <option value="payletter">페이레터</option>
                         <option value="easypay">KICC</option>
+                        <option value="payco">페이코</option>
                     </select>
                 </div>
                 <div class="group">
