--- a/test/payment/production.html
+++ b/test/payment/production.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://cdn.bootpay.co.kr/js/bootpay-3.0.1.min.js" type="application/javascript"></script>
+    <script src="https://cdn.bootpay.co.kr/js/bootpay-3.0.5.min.js" type="application/javascript"></script>
     <script src="./production.js" type="application/javascript"></script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
@@ -22,6 +22,7 @@
                 <option value="kakao">카카오페이</option>
                 <option value="payapp">페이앱</option>
                 <option value="nicepay">나이스페이</option>
+                <option value="payletter">페이레터</option>
             </select>
         </div>
         <div class="group">
