--- a/html/template.html
+++ b/html/template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>부트페이 결제</title>
     <link rel="icon" href="data:;base64,=">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <script src="<%= ENV['js_url'] %>"></script>
 </head>
 <body>
